test_src/compiler_errors/control_flow/ReturnError1.b
class ReturnError1 {
    void test() {
        return 1;
    }
}
